# envoir

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  formal.yml
bindings/go/: README.md  api.go  coldstart_test.go  concurrency_test.go  module_test.go  provenance_test.go  runtime.go  smoke_test.go  trace_test.go  vectors_test.go  wasm_provenance.json
brand/: README.md  make-icons.mjs
client/: README.md  index.html  manifest.webmanifest  sw.js
client/assets/: make-icons.mjs
client/css/: app.css
client/js/: app.js  bus.js  compose.js  identity.js  mesh-sim.js  mote.js  onboarding.js  provenance.js  pwa.js  resolver.js  safety.js  seed.js  shell.js  signin.js  store.js  ui.js
client/js/net/: jmap.js  send.js
client/js/views/: calendar.js  chat.js  contacts.js  files.js  groups.js  identity.js  mail.js  settings.js
client/test/: net.test.mjs
crates/conformance-runner/: Cargo.toml
crates/conformance-runner/src/: construction.rs  lib.rs  main.rs  sync.rs
crates/conformance-runner/tests/: run_over_vectors.rs  sync_vectors.rs
crates/dmtap-auth/: Cargo.toml
crates/dmtap-auth/src/: assertion.rs  challenge.rs  error.rs  lib.rs  seam.rs  session.rs  verify.rs
crates/dmtap-auth/tests/: ceremony.rs
crates/dmtap-clustersync/: Cargo.toml
crates/dmtap-clustersync/src/: cluster.rs  crdt.rs  journal.rs
crates/dmtap-core/: Cargo.toml  vectors.json  vectors_gen.rs.inc
crates/dmtap-core/examples/: gen_vectors.rs
crates/dmtap-core/src/: cbor.rs  deniable.rs  directory.rs  identity.rs  lib.rs  mixnet.rs  mote.rs  profile.rs  pubobj.rs  push.rs  suite.rs
crates/dmtap-core/tests/: conformance_vectors.rs
crates/dmtap-deniable/: Cargo.toml
crates/dmtap-deniable/src/: crypto.rs  lib.rs  ratchet.rs  session.rs  tests.rs
crates/dmtap-mail/: Cargo.toml  README.md
crates/dmtap-mail/src/: auth.rs  autodiscover.rs  jmap.rs  lib.rs  mime.rs  net.rs  pop3.rs  search.rs  smtp.rs  store.rs
crates/dmtap-mail/tests/: imap_session.rs
crates/dmtap-mls/: Cargo.toml
crates/dmtap-mls/src/: ciphersuite.rs  committer.rs  error.rs  lib.rs  member.rs  session.rs
crates/dmtap-mls/tests/: ciphersuite_gate.rs  confirmation.rs  groups.rs
crates/dmtap-namechain-rpc/: Cargo.toml
crates/dmtap-namechain-rpc/src/: ens.rs  lib.rs  ssrf.rs  transport.rs
crates/dmtap-naming/: Cargo.toml
crates/dmtap-naming/src/: error.rs  lib.rs  reconcile.rs  resolver.rs
crates/dmtap-p2p/: Cargo.toml
crates/dmtap-p2p/src/: lib.rs  tests.rs
crates/dmtap-postage-patala/: Cargo.toml  README.md
crates/dmtap-postage-patala/src/: lib.rs
crates/dmtap-seam/: CONTRACT.md  Cargo.toml
crates/dmtap-seam/src/: billing_export.rs  gateway_authz.rs  lib.rs  metering.rs  postage.rs
crates/dmtap-send/: Cargo.toml
crates/dmtap-sync/: Cargo.toml
crates/dmtap-sync-wasm/: Cargo.toml  README.md  build-abi.sh  build.sh
crates/dmtap-sync-wasm/src/: abi.rs  entropy.rs  err.rs  lib.rs
crates/dmtap-sync-wasm/test/: native-trace.json  trace.mjs  vectors.test.mjs
crates/dmtap-sync-wasm/tests/: native_trace.rs
crates/dmtap-sync/src/: cose.rs  crdt.rs  detcbor.rs  error.rs  lib.rs  recon.rs  snapshot.rs  state.rs  wire.rs
crates/dmtap-sync/tests/: clustersync_parity.rs  convergence.rs
crates/downgrade-tests/: Cargo.toml
deploy/: Dockerfile.gateway
desktop/: .gitignore  README.md
desktop/scripts/: prepare-sidecar.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  contributing.md  faq.md  naming.md  privacy.md  protocol.md  roadmap.md  security.md
docs/features/: identity.md  mail.md  transport-traceability.md
formal/: EXPECTED.txt  README.md  check.sh  cold_gate_binding.pv  committer_fork.pv  deniable_1to1.pv  deniable_1to1_deniability.pv  dmtap_auth.pv  run.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: capability_chain.rs  capability_revocation.rs  capability_token.rs  cbor_canonical.rs  clustersync_merge.rs  dns_svcb.rs  dns_txt.rs  envelope_validate.rs  gateway_admission.rs  key_rotation.rs  kt_consistency_proof.rs  kt_inclusion_proof.rs  kt_sth.rs  manifest_merkle.rs  namechain_resolve.rs  naming_classify.rs  naming_common.rs  sphinx_cell.rs  sphinx_fragment_header.rs  sphinx_parse.rs  sphinx_routing_command.rs  sphinx_surb.rs
fuzz/tests/: property_naming.rs
gateway/: Cargo.toml  README.md  SEPARATION.md
gateway/src/: admin.rs  authz.rs  dkim.rs  dns.rs  forwarded_addr.rs  inbound.rs  inbound_tcp.rs  legacy_net.rs  lib.rs  main.rs  mesh.rs  multidomain.rs  net.rs  outbound.rs  outbound_guard.rs  pop3_access.rs  provenance.rs  smtp_submission.rs
gateway/tests/: daemon.rs  gateway.rs  i18n.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: adversarial.rs  deniable_repudiation.rs  dmtap_to_dmtap.rs  full_roundtrip.rs  kt_resolution_and_delegation.rs  mls_group_over_real_mesh.rs  p2p_delivery.rs
node/: Cargo.toml  README.md
node/src/: auth.rs  config.rs  daemon.rs  deniable.rs  group.rs  inbound.rs  jmap_api.rs  journal.rs  keystore.rs  lib.rs  main.rs  mixdir.rs  naming.rs  node.rs  outbound.rs  pubserve.rs  seen.rs  send_api.rs  syncserve.rs  transport.rs  usage.rs
node/tests/: crate_integration.rs  durability.rs  gateway_dispatch.rs  group_e2e.rs  hardening.rs  jmap_listener.rs  pub_listener.rs  send_api.rs  sensitive_flag.rs  storage_quota.rs  sync_listener.rs  tcp_transport.rs  two_node_e2e.rs
site/: README.md  docs.html  index.html
site/css/: docs.css  style.css
site/docs-src/: contributing.md  faq.md  getting-started.md  protocol.md  roadmap.md  security.md
site/js/: docs.js  main.js  markdown.js
src/: authz.rs  directory.rs  lib.rs  main.rs  outbound_tcp.rs
status/: README.md  index.html
status/css/: status.css
status/js/: app.js  shell.js  store.js  ui.js
status/js/views/: user.js  (+1 more)
superadmin/: README.md  index.html
superadmin/css/: superadmin.css
superadmin/js/: app.js  bus.js  shell.js  store.js  ui.js
tests/: sockets.rs
(+16 files in other folders)
