# Envoir OSS monorepo — Cargo workspace.
# Reference implementation of the Decentralized Message Transfer & Access Protocol.
# Fully open source, dual-licensed MIT OR Apache-2.0. Envoir is not a business and runs no
# control plane: the node binary carries every mesh role. The optional legacy mail gateway has
# MOVED OUT of this repo to the Wakala broker repo (github.com/vul-os/wakala, the `gateway`
# coordinator kind); envoir is node-only. The node keeps only a thin dispatch shim
# (`envoir-node --gateway`, see node/src/main.rs) that execs an externally-built gateway binary
# via `ENVOIR_GATEWAY_BIN` — it no longer builds or contains the gateway. A third-party operator
# who wants quotas, usage accounting, or authorization attaches at the
# `crates/dmtap-seam` boundary (reference impls in `crates/dmtap-operator`) — never by forking
# the protocol. `crates/dmtap-seam::postage` is the same story for optional prepaid postage
# credit: provider-agnostic, off by default, with `crates/dmtap-postage-patala` as one isolated,
# non-default reference adapter.

[workspace]
resolver = "2"
members = [
    "node",        # the whole client side; it IS the mesh
    "integration", # cross-component end-to-end tests (test-only crate)
    "crates/*",    # shared libraries incl. dmtap-seam (the operator seam) + dmtap-mls (§5 groups)
]

# `crates/dmtap-postage-patala` is a real member (matched by the `crates/*` glob above) but is
# deliberately left OUT of `default-members`: it path-depends on the sibling `patala` repo
# (`../../patala/{patala-core,patala-stellar}`), an OPTIONAL reference payment-provider adapter for
# `dmtap-seam`'s provider-agnostic `postage::PostageProvider` seam — never a hard dependency of
# `dmtap-seam` or envoir. This mirrors exactly the trick `patala`'s OWN workspace uses for
# `patala-solana`/`patala-stellar`/`patala-hyperswitch`: plain `cargo build`/`cargo test` at this
# workspace root never pulls patala in; only `cargo build -p dmtap-postage-patala` /
# `cargo test -p dmtap-postage-patala` does. `dmtap-seam` alone stays the default, dependency-free
# postage seam (see `crates/dmtap-seam/src/postage.rs`).
default-members = [
    "node",
    "integration",
    "crates/conformance-runner",
    "crates/dmtap-auth",
    "crates/dmtap-clustersync",
    "crates/dmtap-deniable",
    "crates/dmtap-mls",
    "crates/dmtap-namechain-rpc",
    "crates/dmtap-naming",
    "crates/dmtap-operator",
    "crates/dmtap-p2p",
    "crates/dmtap-seam",
    "crates/dmtap-send",
    "crates/dmtap-sync",
    "crates/dmtap-sync-wasm",
    "crates/downgrade-tests",
    "crates/netsim",
]

# The substrate core + mail-protocol layer were carved OUT of this repo into the KOTVA repo
# (`kotva-core` / `kotva-mail`) and are now consumed as a *tag-pinned* dependency, never a moving
# path dep (the isango churn lesson). envoir keeps its existing `use dmtap_core::…` / `use
# dmtap_mail::…` source unchanged via cargo's dependency-rename (`package = "kotva-core"`). The
# legacy mail gateway moved to the Wakala broker repo (the `gateway` coordinator kind); envoir is
# now node-only.
[workspace.dependencies]
dmtap-core = { package = "kotva-core", git = "https://github.com/vul-os/kotva", tag = "core-v0.2.0" }
dmtap-mail = { package = "kotva-mail", git = "https://github.com/vul-os/kotva", tag = "core-v0.2.0" }

[workspace.metadata.dmtap]
spec = "../dmtap/"   # the DMTAP spec repo (sibling; the spec no longer lives in this repo)
license = "MIT OR Apache-2.0"
