[package]
name = "integration"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
publish = false
description = "Cross-component end-to-end integration tests for the Envoir DMTAP reference stack — wiring the real node, mail, and gateway crates together (legacy↔DMTAP, DMTAP↔DMTAP over TCP, adversarial)"

# A test-only crate: the library is empty; everything of interest is under `tests/`, which wires the
# REAL crates (no mocks between components) into end-to-end paths:
#   - legacy → DMTAP: gateway seals a MOTE → real node stores it → dmtap-mail JMAP view sees it
#   - DMTAP → DMTAP:  two real nodes over the TCP transport exchange an encrypted MOTE + ack
#   - adversarial:    tampered/forged MOTE rejected pre-decryption; deferred cold MOTE held-but-unacked

[lib]
path = "src/lib.rs"

[dev-dependencies]
# The real components under test (depended on by their published paths, not re-implemented).
# envoir-node's library crate is named `dmtap` (see node/Cargo.toml [lib]); import it as `dmtap`.
envoir-node = { path = "../node" }
dmtap-core = { path = "../crates/dmtap-core" }
dmtap-mail = { path = "../crates/dmtap-mail" }
envoir-gateway = { path = "../gateway" }
serde_json = "1"
