[package]
name = "conformance-runner"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Executable §18-conformance proof: drives dmtap-core's committed KAT vectors.json (and, where byte-backed, the ../dmtap conformance-suite catalog) through the reference codec and reports PASS/FAIL per case. This is the harness a second implementer runs to check their own decoder/signer against the same fixed inputs."
publish = false

[dependencies]
dmtap-core = { workspace = true }
# Additional workspace crates driven by `construction.rs` so more `suite.json` construction-todo
# cases can be honestly EXECUTED against real reference code, rather than left skipped, when the
# behavior the case describes lives outside dmtap-core proper (auth ceremony, name resolution/KT
# quorum+freshness, MLS groups) — see the module docs on each construction function for exactly
# what is proven and why the dependency is the honest way to test it. The legacy SMTP gateway (§7)
# and its own conformance coverage moved out of this repo entirely, to the Wakala broker repo.
dmtap-auth = { path = "../dmtap-auth" }
dmtap-naming = { path = "../dmtap-naming" }
dmtap-deniable = { path = "../dmtap-deniable" }
dmtap-mls = { path = "../dmtap-mls" }
# The §5.6 device-cluster sync reference (ClusterSyncFrame/ClusterOp validation + the OR-Set/LWW
# CRDT merge) — drives the DMTAP-SYNC-01..05 construction-todo cases. A regular (not dev-only)
# dependency because `construction.rs` is a module of this crate's LIBRARY, not a test file.
dmtap-clustersync = { path = "../dmtap-clustersync" }
# The substrate Sync capability reference (substrate/SYNC.md) — drives every `sync_*` vector in the
# sibling spec repo's `sync_vectors.json` through real code (see `src/sync.rs`), exactly as
# `dmtap-core::pubobj` drives `pub_vectors.json`.
dmtap-sync = { path = "../dmtap-sync" }
# `syncserve::SYNC1_EXT_VALUE_2` — checked against `SYNC.md` §4.1.2's frozen `sync-1/ext-value-2`
# sub-token (correction C-13b) in `sync_ext_value_validate`, so a spelling drift between this node's
# local convention and the now-normative wire spelling fails a test rather than going unnoticed.
# The package is `envoir-node`; its `[lib]` target is named `dmtap`, so `use dmtap::...` below.
envoir-node = { path = "../../node" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

[[bin]]
name = "conformance-runner"
path = "src/main.rs"
