[package]
name = "dmtap-auth"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "DMTAP-Auth (spec §13) — sovereign, decentralized web login: the native origin-bound login ceremony, cnf/proof-of-possession session binding, and DPoP-style key-bound sessions. Reference implementation of the RP + client crypto core; the WebAuthn/PRF front-end and HTTP layer slot in through documented seams."
repository = "https://example.invalid/envoir"

[dependencies]
# The identity/crypto substrate DMTAP-Auth reuses (spec §13.2): IK/device Ed25519 signing,
# domain-separated signatures, canonical integer-keyed CBOR, and BLAKE3 content addressing.
dmtap-core = { path = "../dmtap-core" }
# BLAKE3-256 for the §18.9.8 auth_hash preimage (raw, un-prefixed digest that is signed).
blake3 = "1"
# CSPRNG for single-use challenge nonces and DPoP jti (rand_core::OsRng).
rand_core = { version = "0.6", features = ["getrandom"] }
# Ergonomic error enum (same version dmtap-core uses).
thiserror = "1"
